<resources>
    <!--Nombres de cada action bar de las actividades-->
    <string name="app_name">AbarrotesVilla</string>
    <string name="str_login">Inicio de Sesión</string>
    <string name="str_Registrar">Registro de Usuarios</string>
    <string name="str_MenuPrincipal">Menú Principal</string>
    <string name="str_Almacén">Almacén de Productos</string>
    <string name="str_puntoVenta">Punto de venta</string>
    <string name="str_controlUser">Control de Usuarios</string>
    <string name="str_perfilUser">Perfil de Usuario</string>

    <!--Strings para el login-->
    <string name="strUsuario">Usuario</string>
    <string name="strContraseña">Contraseña</string>
    <string name="strIngresar">Iniciar Sesión</string>
    <string name="strNuevoUsuario">¿Deseas agregar un nuevo usuario?</string>

    <!--Strings para el la activity registrar-->
    <string name="strNombre">Nombre</string>
    <string name="strApellido">Apellidos</string>
    <string name="strTelefono">Télefono</string>
    <string name="strTipoUser">Tipo de Usuario</string>
    <string name="strRegistrar">Registrar</string>
    <string name="str_confirmarContra">Confirmar Contraseña</string>
    <string name="str_regresar">Vuelve al inicio de sesión</string>

    <!--Strings para el menú overflow de nuestra action bar.-->
    <string name="str_perfil">Ver perfil</string>
    <string name="str_cerrar">Cerrar Sesión</string>
    <string name="str_menu">Menú principal</string>
    <string name="str_prod">Almacén</string>
    <string name="str_venta">Punto de venta</string>
    <string name="str_cobrarVenta">Cobrar Venta</string>
    <string name="str_nuevaVenta">Nueva Venta</string>

    <!--Strings para la activity ProductosActivity (Almacén)-->
    <string name="str_codigoProd">Código del producto</string>
    <string name="str_nomProd">Nombre del producto</string>
    <string name="str_descrip">Descripción del producto</string>
    <string name="str_cantidad"># Cantidad</string>
    <string name="str_cantReserva"># Cant. reserva</string>
    <string name="str_precioCompra">Precio compra</string>
    <string name="str_precioVenta">Precio venta</string>

    <!--Strings para la actiivty punto de venta-->
    <string name="str_nombreProd">Producto: </string>
    <string name="str_cant">Cantidad </string>
    <string name="rv_cantidad">Cantidad:  </string>
    <string name="str_precio">Precio: $</string>
    <string name="str_subtotal">Subtotal: $</string>
    <string name="str_total">Total: $</string>
    <string name="str_pago">Digite la cantidad de pago</string>
    <string name="str_cambio">Cambio: </string>

    <!--Strings para la activity control de usuarios-->
    <string name="str_txtCodigoUser">Codigo de usuario</string>

    <!--Strings para la activity perfil de usuario-->
    <string name="str_ModificarDatos">Modificar datos</string>
    <string name="str_Guardar">Guardar</string>
    <string name="str_id">Id</string>

    <!--Strings para la activity proveedores-->
    <string name="str_proveedor">Selecciona el Proveedor</string>
    <string name="str_mensaje">Escriba el mensaje...</string>
    <string name="str_enviar">Enviar</string>

    <!-- Strings para la activity crud proveedores -->
    <string name="str_idProveedor">ID</string>
    <string name="str_nombreProveedor">Nombre del proveedor</string>
    <string name="str_telProveedor">Telefono del proveedor</string>

    <!--Strings para el menú overflow_proveedores de nuestra action bar.-->
    <string name="str_opContacto">Contactos</string>
    <string name="str_opRegitrar">Registrar Contacto</string>

</resources>