<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:padding="25dp"
    android:background="@drawable/wp_login"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/logo_villa" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="14dp"
            android:orientation="vertical" >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:id="@+id/Usuario"
                android:hint="@string/strUsuario"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:id="@+id/password"
                android:hint="@string/strContraseña"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/btnUsuarioNuevo"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textColor="@android:color/holo_blue_dark"
                android:clickable="true"
                android:focusable="true"
                android:textStyle="bold"
                android:text="@string/strNuevoUsuario" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnIngresar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/strIngresar"
                android:layout_marginTop="12dp"/>
        </LinearLayout>
</LinearLayout>