<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pago"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_pago">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPagoEm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCobrarEm"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/str_cobrarVenta"
        android:layout_marginTop="5dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_cambio"
            android:textStyle="bold"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/tvCambioEm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20dp"/>

    </LinearLayout>




</LinearLayout>